--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Cappadocia</title>
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/slick.css">
-  <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-  <header class="header">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Cappadocia</title>
+    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/slick.css" />
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+
+  <body>
+    <header class="header">
     <div class="container">
       <div class="header__top">
         <nav class="menu">
@@ -25,9 +26,50 @@
       <h1 class="header__title">Cappadocia<span>Эксклюзивный тур</span></h1>
     </div>
   </header>
+    <section class="fairy page-section">
+      <div class="container">
+        <h3 class="fairy__title title">
+          Fairy tail
+          <span>Сказочная страна чудес</span>
+        </h3>
+      </div>
+      <div class="fairy__inner">
+        <div class="fairy__slider">
+          <div class="fairy__item"><img src="images/fairy-1.jpg" alt="" /></div>
+          <div class="fairy__item"><img src="images/fairy-2.jpg" alt="" /></div>
+          <div class="fairy__item"><img src="images/fairy-3.jpg" alt="" /></div>
+        </div>
+        <div class="fairy__content">
+          <p class="fairy__text">
+            Каппадокия - сказочная страна воздушных шаров, сырных домиков,
+            разноцветных долин и волшебных рассветов! Сюда приезжают, чтобы
+            увидеть природные чудеса, полетать на воздушном шаре и конечно же
+            сделать миллион красивых фотографий!
+          </p>
+          <p class="fairy__text">
+            Участников тура ждёт профессиональная фотосессия от лучших
+            фотографов Каппадокии! Ведь именно за волшебными фото на рассвете на
+            фоне воздушных шаров сюда приезжают люди со всего мира!
+          </p>
+          <div class="fairy__body-title">Также Вы увидите:</div>
+          <ul class="fairy__list">
+            <li>Музей на открытом воздухе в Гёреме</li>
+            <li>Ущелье Ыхлара и монастырь Селиме</li>
+            <li>Подземные города</li>
+            <li>Крепость Учхисар</li>
+            <li>Зельве и Пашабаг</li>
+          </ul>
+          <p class="fairy__text">и многие другие достпримечательности.</p>
+          <p class="fairy__text">
+            Местная кухня — один из поводов посетить Каппадокию, здесь есть
+            рестораны на любой бюджет.
+          </p>
+        </div>
+      </div>
+    </section>
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src="js/slick.min.js"></script>
-  <script src="js/main.js"></script>
-</body>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="js/slick.min.js"></script>
+    <script src="js/main.js"></script>
+  </body>
 </html>
