--- a/index.html
+++ b/index.html
@@ -12,20 +12,28 @@
 
   <body>
     <header class="header">
-    <div class="container">
-      <div class="header__top">
-        <nav class="menu">
-          <ul class="menu__list">
-            <li class="menu__item"><a class="menu__link" href="#">Маршрут</a></li>
-            <li class="menu__item"><a class="menu__link" href="#">Отель</a></li>
-            <li class="menu__item"><a class="menu__link" href="#">Стоимость</a></li>
-          </ul>
-        </nav>
-        <a class="header__phone" href="tel:+380665557776">+38(066)555-777-6</a>
+      <div class="container">
+        <div class="header__top">
+          <nav class="menu">
+            <ul class="menu__list">
+              <li class="menu__item">
+                <a class="menu__link" href="#">Маршрут</a>
+              </li>
+              <li class="menu__item">
+                <a class="menu__link" href="#">Отель</a>
+              </li>
+              <li class="menu__item">
+                <a class="menu__link" href="#">Стоимость</a>
+              </li>
+            </ul>
+          </nav>
+          <a class="header__phone" href="tel:+380665557776"
+            >+38(066)555-777-6</a
+          >
+        </div>
+        <h1 class="header__title">Cappadocia<span>Эксклюзивный тур</span></h1>
       </div>
-      <h1 class="header__title">Cappadocia<span>Эксклюзивный тур</span></h1>
-    </div>
-  </header>
+    </header>
     <section class="fairy page-section">
       <div class="container">
         <h3 class="fairy__title title">
@@ -67,7 +75,54 @@
         </div>
       </div>
     </section>
-
+    <section class="trip page-section">
+      <div class="trip__inner">
+        <div class="trip__content">
+          <div class="trip__content-inner">
+          <h3 class="trip__title title">Our trip<span>Маршрут</span></h3>
+          <ul class="trip__list">
+            <li class="trip__item">День 1</li>
+            <li class="trip__item">Прилёт в Анкару</li>
+            <li class="trip__item">Трансфер в Каппадокию</li>
+            <li class="trip__item">Солёное озеро</li>
+            <li class="trip__item">Приезд в Гёреме </li>
+            <li class="trip__item">Ужин</li>
+          </ul>
+          <ul class="trip__list">
+            <li class="trip__item">День 2</li>
+            <li class="trip__item">Фотосессия</li>
+            <li class="trip__item">Завтрак в отеле </li>
+            <li class="trip__item">Дневной тур по Каппадокии </li>
+            <li class="trip__item">Закат с панорамным видом</li>
+          </ul>
+          <ul class="trip__list">
+            <li class="trip__item">День 3</li>
+            <li class="trip__item">Полёт на воздушном шаре</li>
+            <li class="trip__item">Завтрак в отеле </li>
+            <li class="trip__item">Экскурсии на выбор </li>
+          </ul>
+          <ul class="trip__list">
+            <li class="trip__item">День 4</li>
+            <li class="trip__item">Свободное время, шоппинг</li>
+            <li class="trip__item">Трансфер в Анкару</li>
+            <li class="trip__item">Вылет в Киев</li>
+          </ul>
+          <a class="trip__btn" href="#">ЗАБРОНИРОВАТЬ</a>
+        </div>
+      </div>
+        <div class="trip__slider">
+          <div class="trip__slider-item">
+            <img src="images/trip-1.jpg" alt="" />
+          </div>
+          <div class="trip__slider-item">
+            <img src="images/trip-2.jpg" alt="" />
+          </div>
+          <div class="trip__slider-item">
+            <img src="images/trip-3.jpg" alt="" />
+          </div>
+        </div>
+      </div>
+    </section>
     <script src="js/jquery-3.7.1.min.js"></script>
     <script src="js/slick.min.js"></script>
     <script src="js/main.js"></script>
