--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Cappadocia</title>
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/slick.css" />
+    <link rel="stylesheet" href="css/jquery.fancybox.css" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
 
@@ -79,37 +80,37 @@
       <div class="trip__inner">
         <div class="trip__content">
           <div class="trip__content-inner">
-          <h3 class="trip__title title">Our trip<span>Маршрут</span></h3>
-          <ul class="trip__list">
-            <li class="trip__item">День 1</li>
-            <li class="trip__item">Прилёт в Анкару</li>
-            <li class="trip__item">Трансфер в Каппадокию</li>
-            <li class="trip__item">Солёное озеро</li>
-            <li class="trip__item">Приезд в Гёреме </li>
-            <li class="trip__item">Ужин</li>
-          </ul>
-          <ul class="trip__list">
-            <li class="trip__item">День 2</li>
-            <li class="trip__item">Фотосессия</li>
-            <li class="trip__item">Завтрак в отеле </li>
-            <li class="trip__item">Дневной тур по Каппадокии </li>
-            <li class="trip__item">Закат с панорамным видом</li>
-          </ul>
-          <ul class="trip__list">
-            <li class="trip__item">День 3</li>
-            <li class="trip__item">Полёт на воздушном шаре</li>
-            <li class="trip__item">Завтрак в отеле </li>
-            <li class="trip__item">Экскурсии на выбор </li>
-          </ul>
-          <ul class="trip__list">
-            <li class="trip__item">День 4</li>
-            <li class="trip__item">Свободное время, шоппинг</li>
-            <li class="trip__item">Трансфер в Анкару</li>
-            <li class="trip__item">Вылет в Киев</li>
-          </ul>
-          <a class="trip__btn" href="#">ЗАБРОНИРОВАТЬ</a>
+            <h3 class="trip__title title">Our trip<span>Маршрут</span></h3>
+            <div class="trip__list-title">День 1</div>
+            <ul class="trip__list">
+              <li class="trip__item">Прилёт в Анкару</li>
+              <li class="trip__item">Трансфер в Каппадокию</li>
+              <li class="trip__item">Солёное озеро</li>
+              <li class="trip__item">Приезд в Гёреме</li>
+              <li class="trip__item">Ужин</li>
+            </ul>
+            <div class="trip__list-title">День 2</div>
+            <ul class="trip__list">
+              <li class="trip__item">Фотосессия</li>
+              <li class="trip__item">Завтрак в отеле</li>
+              <li class="trip__item">Дневной тур по Каппадокии</li>
+              <li class="trip__item">Закат с панорамным видом</li>
+            </ul>
+            <div class="trip__list-title">День 3</div>
+            <ul class="trip__list">
+              <li class="trip__item">Полёт на воздушном шаре</li>
+              <li class="trip__item">Завтрак в отеле</li>
+              <li class="trip__item">Экскурсии на выбор</li>
+            </ul>
+            <div class="trip__list-title">День 4</div>
+            <ul class="trip__list">
+              <li class="trip__item">Свободное время, шоппинг</li>
+              <li class="trip__item">Трансфер в Анкару</li>
+              <li class="trip__item">Вылет в Киев</li>
+            </ul>
+            <a class="trip__btn" href="#">ЗАБРОНИРОВАТЬ</a>
+          </div>
         </div>
-      </div>
         <div class="trip__slider">
           <div class="trip__slider-item">
             <img src="images/trip-1.jpg" alt="" />
@@ -123,8 +124,128 @@
         </div>
       </div>
     </section>
+    <section class="hotel page-section">
+      <div class="container">
+        <h3 class="hotel__title title">Hotel<span>Sultan Cave Suites</span></h3>
+        <div class="hotel__inner">
+          <img class="hotel_img" src="images/hotel.jpg" alt="" />
+          <div class="hotel__content">
+            <p class="hotel__text">
+              В этом уникальном отеле, расположенном на вершине холма Айдынлы,
+              вы можете забронировать высеченные в скале номера, обставленные
+              антикварной мебелью со всей Турции. С солнечной террасы отеля
+              открывается прекрасный панорамный вид на Национальный парк Гереме.
+            </p>
+            <p class="hotel__text">
+              Большинство номеров отеля Sultan Cave Suites высечены в скале, что
+              обеспечивает прохладу и покой. Все номера оборудованы гостиной
+              зоной и современной ванной комнатой. В большинстве из них есть
+              собственная терраса или балкон.
+            </p>
+            <p class="hotel__text">
+              Отель Cave Suites Sultan располагает изысканным рестораном, где
+              подают фирменные блюда региона Каппадокии. После ужина, пройдя на
+              террасу, вы сможете заказать напиток и полюбоваться закатом солнца
+              над деревней.
+            </p>
+            <div class="hotel__gallery">
+              <a
+                data-fancybox="images"
+                data-width="2048"
+                data-height="1365"
+                href="images/hotel-gallery-1.jpg"
+                ><img src="images/hotel-gallery-1.jpg" alt="" /></a
+              ><a
+                data-fancybox="images"
+                data-width="2048"
+                data-height="1365"
+                href="images/hotel-gallery-2.jpg"
+                ><img src="images/hotel-gallery-2.jpg" alt="" /></a
+              ><a
+                data-fancybox="images"
+                data-width="2048"
+                data-height="1365"
+                href="images/hotel-gallery-3.jpg"
+                ><img src="images/hotel-gallery-3.jpg" alt="" /></a
+              ><a
+                data-fancybox="images"
+                data-width="2048"
+                data-height="1365"
+                href="images/hotel-gallery-4.jpg"
+                ><img src="images/hotel-gallery-4.jpg" alt=""
+              /></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="price page-section">
+      <div class="container">
+        <h3 class="price__title title">Price<span>Стоимость услуг</span></h3>
+        <div class="price__inner">
+          <div class="price__on">
+            <div class="price__on-title">Включено</div>
+            <ul class="price__list">
+              <li class="price__item">
+                Проживание в двухместном номере в отеле с завтраками
+              </li>
+              <li class="price__item">
+                Индивидуальный трансфер для нашей группы из Анкары и обратно
+              </li>
+              <li class="price__item">Экскурсия на Солёное озеро</li>
+              <li class="price__item">
+                Индивидуальная дневная экскурсия по лучшим местам Каппадокии с
+                личным транспортом
+              </li>
+              <li class="price__item">
+                Фотосессия с профессиональным фотографом для каждой участницы
+                (Несколько локаций, 5 лучших фото в обработке фотографа и весь
+                материал (до 100 фотографий)
+              </li>
+            </ul>
+          </div>
+          <div class="price__off">
+            <div class="price__off-title">Не включено</div>
+            <ul class="price__list">
+              <li class="price__item">Авиа Киев-Анкара-Киев (140-170$)</li>
+              <li class="price__item">Обеды и ужины (150$ на поездку)</li>
+              <li class="price__item">Воздушный шар 200$</li>
+              <li class="price__item">
+                Дополнительные экскурсии (по желанию) от 30$
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="contacts page-section">
+      <div class="container">
+        <div class="contacts__inner">
+          <div class="contacts__content">
+            <div class="contacts__info">
+              <div class="contacts__date">
+                1.07.2020<span>Ближайшая дата тура </span>
+              </div>
+              <div class="contacts__price">490$<span>Стоимость</span></div>
+            </div>
+            <form class="contacts__form">
+              <div class="contacts__form-title">
+                Оставить заявку или задать вопрос
+              </div>
+              <input class="contacts__form-name" type="text" />
+              <input class="contacts__form-phone" type="tel" />
+              <button class="contacts__form-btn" type="submit">
+                ОСТАВИТЬ ЗАЯВКУ
+              </button>
+            </form>
+          </div>
+          <img class="contacts__img" src="images/contacts.jpg" alt="" />
+        </div>
+      </div>
+    </section>
     <script src="js/jquery-3.7.1.min.js"></script>
     <script src="js/slick.min.js"></script>
+    <script src="js/jquery.fancybox.min.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
