--- a/index.html
+++ b/index.html
@@ -229,11 +229,19 @@
               <div class="contacts__price">490$<span>Стоимость</span></div>
             </div>
             <form class="contacts__form">
-              <div class="contacts__form-title">
+              <h4 class="contacts__form-title">
                 Оставить заявку или задать вопрос
-              </div>
-              <input class="contacts__form-name" type="text" />
-              <input class="contacts__form-phone" type="tel" />
+              </h4>
+              <input
+                class="contacts__form-input contacts__form-name"
+                type="text"
+                placeholder="Имя"
+              />
+              <input
+                class="contacts__form-input contacts__form-phone"
+                type="tel"
+                placeholder="Телефон"
+              />
               <button class="contacts__form-btn" type="submit">
                 ОСТАВИТЬ ЗАЯВКУ
               </button>
@@ -243,6 +251,44 @@
         </div>
       </div>
     </section>
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__inner">
+          <div class="footer__contacts">
+            <div class="footer__contacts-title">Contacts</div>
+            <a class="footer__phone" href="tel:+380665557776"
+              ><span><img src="images/footer-phone-icon.svg" alt="" /></span
+              >+38(066)555-777-6</a
+            >
+            <a class="footer__email" href="mailto:сappadocia.tours@gmail.com"
+              ><span><img src="images/footer-email.svg" alt="" /></span
+              >сappadocia.tours@gmail.com</a
+            >
+            <div class="footer__social">
+              <a class="footer__social-link" href="#"
+                ><img
+                  class="footer__social-img"
+                  src="images/youtube.svg"
+                  alt=""
+              /></a>
+              <a class="footer__social-link" href="#"
+                ><img
+                  class="footer__social-img"
+                  src="images/facebook.svg"
+                  alt=""
+              /></a>
+              <a class="footer__social-link" href="#"
+                ><img
+                  class="footer__social-img"
+                  src="images/instagram.svg"
+                  alt=""
+              /></a>
+            </div>
+          </div>
+          <div class="footer__text">Dreams come true</div>
+        </div>
+      </div>
+    </footer>
     <script src="js/jquery-3.7.1.min.js"></script>
     <script src="js/slick.min.js"></script>
     <script src="js/jquery.fancybox.min.js"></script>
