--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
         </div>
       </div>
     </section>
+    <!--
     <section class="trip page-section">
       <div class="trip__inner">
         <div class="trip__content">
@@ -257,11 +258,9 @@
           <div class="footer__contacts">
             <div class="footer__contacts-title">Contacts</div>
             <a class="footer__phone" href="tel:+380665557776"
-              ><span><img src="images/footer-phone-icon.svg" alt="" /></span
               >+38(066)555-777-6</a
             >
             <a class="footer__email" href="mailto:сappadocia.tours@gmail.com"
-              ><span><img src="images/footer-email.svg" alt="" /></span
               >сappadocia.tours@gmail.com</a
             >
             <div class="footer__social">
@@ -288,7 +287,7 @@
           <div class="footer__text">Dreams come true</div>
         </div>
       </div>
-    </footer>
+    </footer> -->
     <script src="js/jquery-3.7.1.min.js"></script>
     <script src="js/slick.min.js"></script>
     <script src="js/jquery.fancybox.min.js"></script>
